<resources>
    <string name="app_name">위치정보 App</string>

    <!-- main activity -->
    <string name="main_address_text">주소</string>
    <string name="main_history_text">히스토리</string>
    <string name="main_setting_text">설정</string>

    <!-- permission check -->
    <string name="check_gps_text">GPS 연결을 확인해주세요.</string>
    <string name="check_location_permission_text">현재 위치를 확인하시려면 설정에서 위치 권한을 허용해주세요.</string>
    <string name="go_to_setting_text">설정으로 이동</string>
    <string name="permit_location_text">위치 권한이 승인되었습니다.</string>
    <string name="reject_location_text">위치 권한이 거부되었습니다.</string>

    <!-- history dialog -->
    <string name="history_date_sign_text">날짜</string>
    <string name="history_date_text">yyyy.mm.dd</string>
    <string name="history_number_column_text">순번</string>
    <string name="history_latitude_column_text">위도</string>
    <string name="history_longitude_column_text">경도</string>
    <string name="history_list_empty_text">저장된 히스토리 내역이 없어요!\n저장 간격을 설정하고 장소를 저장해 보세요.</string>

    <!-- dialog button text -->
    <string name="dialog_cancel_text">취소</string>
    <string name="dialog_ok_text">확인</string>

    <!-- address dialog -->
    <string name="address_dialog_title">주소보기</string>

    <!-- timer dialog -->
    <string name="setting_timer_title">설정</string>
    <string name="setting_timer_duration">저장 간격</string>
    <string name="setting_timer_minutes">분</string>
    <string name="setting_timer_limit">1분 이상으로 설정해주세요</string>
    <string name="setting_intent">location.history.intent.action.put.alarm</string>
    <string name="setting_boot_intent">android.intent.action.BOOT_COMPLETED</string>
</resources>