<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:padding="@dimen/layout_margin_default"
    android:background="@drawable/bg_bottom_sheet_dialog"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.custom.dialog.HistoryFragmentDialog">

    <TextView
        android:id="@+id/dialog_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_history_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/dialog_date_sign_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_date_sign_text"
        android:layout_marginEnd="@dimen/layout_margin_default"
        app:layout_constraintTop_toTopOf="@id/dialog_date_tv"
        app:layout_constraintBottom_toBottomOf="@id/dialog_date_tv"
        app:layout_constraintEnd_toStartOf="@id/dialog_date_tv" />

    <TextView
        android:id="@+id/dialog_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_date_text"
        app:layout_constraintTop_toBottomOf="@id/dialog_title_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <TableLayout
        android:id="@+id/dialog_history_tl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_marginTop="@dimen/layout_margin_default"
        app:layout_constraintTop_toBottomOf="@id/dialog_date_tv">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/history_number_column_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/history_latitude_column_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/history_longitude_column_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/history_date_sign_text" />

        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/dialog_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_cancel_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dialog_ok_btn"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/dialog_ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_ok_text"
        app:layout_constraintStart_toEndOf="@id/dialog_cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>