<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginBottom="@dimen/item_history_list_margin_default">

    <TextView
        android:id="@+id/item_history_number_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/history_number_column_text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/item_history_latitude_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/history_latitude_column_text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/item_history_longitude_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/history_longitude_column_text"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/item_history_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:gravity="center"
        android:text="@string/history_date_sign_text"
        android:textColor="@color/black" />

</LinearLayout>